--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Bingxue An</title>
 </head>
 <body>
-  <font size="5">Bingxue An's Personal Website</font>
+  <h1><font size="5">Bingxue An's Personal Website</font><h1>
   
   
   
