--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="IMG_3833.jpg" alt="Sandwich" style="width:100%">
-      <h3>The Perfect Sandwich, A Real NYC Classic</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="IMG_1271.jpg" alt="Prawn" style="width:100%">
+      <h3>Roasted Garlic Prawn Garlic</h3>
+      <p>prawns, garlic, ginger, olive oil, green onion</p>
     </div>
     <div class="w3-quarter">
       <img src="IMG_0325.jpg" alt="Steak" style="width:100%">
