--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
       <img src="IMG_1271.jpg" alt="Prawn" style="width:100%">
-      <h3>Roasted Garlic Prawn Garlic</h3>
-      <p>prawns, garlic, ginger, olive oil, green onion</p>
+      <h3>Roasted Garlic Prawn</h3>
+      <p>prawns, garlic, ginger, green onion, olive oil, soy sauce, cooking wine</p>
     </div>
     <div class="w3-quarter">
-      <img src="IMG_0325.jpg" alt="Steak" style="width:100%">
-      <h3>Let Me Tell You About This Steak</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="IMG_0727.jpg" alt="Salmon" style="width:100%">
+      <h3>Pan-Fried Salmon</h3>
+      <p>salmon, asparagus, salt, black pepper, butter</p>
     </div>
     <div class="w3-quarter">
-      <img src="/w3images/cherries.jpg" alt="Cherries" style="width:100%">
-      <h3>Cherries, interrupted</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="IMG_1012.jpg" alt="Unadon" style="width:100%">
+      <h3>Unadon</h3>
+      <p>eel, egg, sesame seed, soy sauce, sugar, honey</p>
       <p>What else?</p>
     </div>
     <div class="w3-quarter">
-      <img src="/w3images/wine.jpg" alt="Pasta and Wine" style="width:100%">
-      <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="IMG_3288.jpg" alt="Crayfish" style="width:100%">
+      <h3>Crayfish with garlic sauce</h3>
+      <p>crayfish, garlic, peanut oil, chili sauce</p>
     </div>
   </div>
   
