--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
       <img src="IMG_1012.jpg" alt="Unadon" style="width:100%">
       <h3>Unadon</h3>
       <p>eel, egg, sesame seed, soy sauce, sugar, honey</p>
-      <p>What else?</p>
     </div>
     <div class="w3-quarter">
       <img src="IMG_3288.jpg" alt="Crayfish" style="width:100%">
-      <h3>Crayfish with garlic sauce</h3>
+      <h3>Crayfish with Garlic Sauce</h3>
       <p>crayfish, garlic, peanut oil, chili sauce</p>
     </div>
   </div>
@@ -53,24 +52,24 @@
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-      <img src="/w3images/popsicle.jpg" alt="Popsicle" style="width:100%">
-      <h3>All I Need Is a Popsicle</h3>
-      <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="IMG_3951.jpg" alt="Chocolate Waffle" style="width:100%">
+      <h3>Chocolate Waffle</h3>
+      <p>waffle, cream, chocolate syrup, oreo, chocolate chips, marshmallow</p>
     </div>
     <div class="w3-quarter">
-      <img src="/w3images/salmon.jpg" alt="Salmon" style="width:100%">
-      <h3>Salmon For Your Skin</h3>
-      <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="IMG_3675.jpg" alt="Brownies" style="width:100%">
+      <h3>Brownies with Ice Cream</h3>
+      <p>chocolate brownie, vanilla ice cream, chocolate syrup</p>
     </div>
     <div class="w3-quarter">
-      <img src="/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
-      <h3>The Perfect Sandwich, A Real Classic</h3>
-      <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="IMG_3833.jpg" alt="Mixed Waffle" style="width:100%">
+      <h3>Mixed Waffle</h3>
+      <p>waffle, chocolate syrup, strawberry syrup, oreo, chocolate chips, M&Ms, strawberries, blueberries</p>
     </div>
     <div class="w3-quarter">
-      <img src="/w3images/croissant.jpg" alt="Croissant" style="width:100%">
-      <h3>Le French</h3>
-      <p>Lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+      <img src="IMG_0325.jpg" alt="Frozen Yogurt" style="width:100%">
+      <h3>Frozen Yogurt</h3>
+      <p>frozen yogurt, strawberries, blueberries, bubbles</p>
     </div>
   </div>
 
@@ -84,10 +83,11 @@
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32 w3-center">  
-    <h3>About Me, The Food Man</h3><br>
+    <h3>About Me</h3><br>
     <img src="/w3images/chef.jpg" alt="Me" class="w3-image" style="display:block;margin:auto" width="800" height="533">
     <div class="w3-padding-32">
-      <h4><b>I am Who I Am!</b></h4>
+      <h4><b>Contact Information</b></h4>
+      <h4><b>Email: bingxue3@illinois.edu</b></h4>
       <h6><i>With Passion For Real, Good Food</i></h6>
       <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
     </div>
