--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="w3-quarter">
       <img src="IMG_3833.jpg" alt="Mixed Waffle" style="width:100%">
       <h3>Mixed Waffle</h3>
-      <p>waffle, chocolate syrup, strawberry syrup, oreo, chocolate chips, M&Ms, strawberries, blueberries</p>
+      <p>waffle, chocolate syrup, strawberry syrup, oreo, chocolate chips, MMs, strawberries, blueberries</p>
     </div>
     <div class="w3-quarter">
       <img src="IMG_0325.jpg" alt="Frozen Yogurt" style="width:100%">
