--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <img src="IMG_2490.jpg" alt="Me" class="w3-image" style="display:block;margin:auto" width="500" height="500">
     <div class="w3-padding-32">
       <h4><b>Contact Information</b></h4>
+      <h4><b>Bingxue An</b></h4>
       <h4><b><a href="mailto:bingxue3@illinois.edu">Email: bingxue3@illinois.edu</a></b></h4>
       <p>I like cooking so much and I really want to share my food with you! Hope you like my website!</p>
     </div>
